testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_interpolation/case4.expect.out
error: unterminated string interpolation
  ==> case4.cj:15:10:
   | 
15 |     cangjie ${
   |             ^^^ unterminated string interpolation
   | 

1 error generated, 1 error printed.
